# renegade

./: Readme.md
docker/: Dockerfile  into_dev.sh  launch_dev.sh
modules/chassis/: CMakeLists.txt  package.xml
modules/chassis/include/: motor.h
modules/chassis/msg/: chassis_msg.msg
modules/chassis/src/: chassis.cc  main.cc  motor.cc  vehicle_state.cc
modules/common/serial/: CMakeLists.txt  package.xml
modules/common/serial/include/: serial.h
modules/common/serial/src/: serial.cc  serial_read_test.cc  serial_write_test.cc
modules/control/: CMakeLists.txt  package.xml
modules/control/msg/: control_cmd.msg
modules/control/scripts/: teleop-gamepad.py
modules/gps/: CMakeLists.txt  package.xml
modules/gps/include/: ublox.h
modules/gps/msg/: gps_msg.msg
modules/gps/src/: gps.cc  ublox.cc
scripts/: teleop-gamepad.py
scripts/arduino/actuator/: actuator.ino
scripts/arduino/dump_gps/: dump_gps.ino
scripts/arduino/encoder/: encoder.ino
scripts/arduino/ublox_tinygps/: ublox_tinygps.ino
